--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 #header {
-  display: flex;
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
 }
 
 h4 {
-  margin-left: 30px;
+  /* margin-left: 30px; */
 }
 
 .transaction {
