--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,20 @@
   margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(4,1fr);
+  justify-items: center;
+  align-items: center;
 }
 
-h4 {
-  /* margin-left: 30px; */
+#transactions {
+  display: grid;
 }
 
 .transaction {
   display:grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  margin-top: 10px;
+  justify-items: center;
+  align-items: center;
 }
 
 .withdrawal {
