--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,9 +1,5 @@
 #header {
-  margin-top: 20px;
-  display: grid;
-  grid-template-columns: repeat(4,1fr);
-  justify-items: center;
-  align-items: center;
+  margin-bottom: 10px;
 }
 
 #transactions {
