--- a/src/style/App.css
+++ b/src/style/App.css
@@ -3,9 +3,27 @@
   width: 99vw;
 }
 
-#operations-form {
+.textfield{
+  flex:1;
+}
+
+.form {
   justify-self: center;
-  margin-top: 18%;
+  margin-top: 20vh;
+  box-shadow: 0px 10px 20px 0px rgba(50, 50, 50, 0.52);
+  border-radius: 5px;
+  padding: 0 10px;
+  width: 18em;
+  
+}
+
+
+#btns-list-item{
+  justify-content: center;
+}
+
+#divider {
+  margin: 8px 0;
 }
 
 #header {
