--- a/src/style/App.css
+++ b/src/style/App.css
@@ -30,9 +30,10 @@
 #divider {
   margin: 8px 0;
 }
-.breakdown-header{
+
+/* .breakdown#header{
   background-color: blue;
-}
+} */
 
 #breakdown {
   text-align: center;
@@ -92,4 +93,25 @@ a{
 p{
   margin:0;
   font-family: 'Merriweather', serif;
+}
+
+#footer {
+  position: fixed;
+  background-color: #3f51b5;
+  color: #FFF;
+  bottom:0;
+  width:100%;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  justify-items: center;
+  align-items: center;
+  min-height: 40px;
+  box-shadow: 0px -1px 4px 1px rgba(0,0,0,0.4);
+}
+
+#user{
+  display: grid;
+  grid-template-columns: 1fr 1.4fr;
+  align-items: center;
 }
